// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DelightfulDropdown > Snapshot tests > Basic dropdown snapshot 1`] = `
<DocumentFragment>
  <span
    class="delightful-dropdown-trigger"
  >
    Dropdown
  </span>
</DocumentFragment>
`;

exports[`DelightfulDropdown > Snapshot tests > dropdown menu with icon snapshot 1`] = `
<DocumentFragment>
  <div
    class="delightful-dropdown-trigger"
  >
    🏠 下拉菜单
  </div>
</DocumentFragment>
`;

exports[`DelightfulDropdown > Snapshot tests > dropdown menu with button style snapshot 1`] = `
<DocumentFragment>
  <button
    class="delightful-dropdown-trigger"
  >
    按钮下拉
  </button>
</DocumentFragment>
`;

exports[`DelightfulDropdown > Snapshot tests > dropdown menu with custom class snapshot 1`] = `
<DocumentFragment>
  <span
    class="delightful-dropdown-trigger custom-dropdown"
  >
    下拉菜单
  </span>
</DocumentFragment>
`;

exports[`DelightfulDropdown > Snapshot tests > dropdown menu with custom attributes snapshot 1`] = `
<DocumentFragment>
  <span
    class="delightful-dropdown-trigger"
  >
    下拉菜单
  </span>
</DocumentFragment>
`;

exports[`DelightfulDropdown > Snapshot tests > dropdown menu with menu items snapshot 1`] = `
<DocumentFragment>
  <span
    class="delightful-dropdown-trigger"
  >
    下拉菜单
  </span>
</DocumentFragment>
`;

exports[`DelightfulDropdown > Snapshot tests > disabled state dropdown menu snapshot 1`] = `
<DocumentFragment>
  <span
    class="delightful-dropdown-trigger"
    disabled=""
  >
    下拉菜单
  </span>
</DocumentFragment>
`;
